--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "terunjs",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Automate creation files",
+  "main": "src/index.js",
   "preferGlobal": true,
   "bin": {
     "terun": "lib/index.js"
@@ -11,12 +11,22 @@
     "build": "./node_modules/.bin/babel src --out-dir lib --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "automate",
+    "files",
+    "generate",
+    "easy",
+    "speed"
+  ],
+  "author": "Raphael Kieling Tondin",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "commander": "^2.18.0"
+    "chalk": "^2.4.1",
+    "commander": "^2.18.0",
+    "loading-cli": "^1.0.8",
+    "mustache": "^3.0.0",
+    "prompt": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
