--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
     "loading-cli": "^1.0.8",
+    "mkdir-recursive": "^0.4.0",
     "mustache": "^3.0.0",
     "pluralize-ptbr": "^1.0.3",
     "prompt": "^1.0.0"
