Agora é possível customizar as tags

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terunjs",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Automate creation files",
   "main": "src/index.js",
   "preferGlobal": true,
@@ -20,6 +20,7 @@
   ],
   "author": "Raphael Kieling Tondin",
   "license": "ISC",
+  "github": "https://github.com/raphaelkieling/terunjs",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "chalk": "^2.4.1",
