#21061 gitignore atualizado com eslint para suportar linux e consoles

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
         ],
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
         ],
         "quotes": [
             "error",
@@ -24,6 +24,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-console": 0
     }
 }
