--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@babel/polyfill": "^7.0.0",
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
+    "enquirer": "^2.1.1",
     "loading-cli": "^1.0.8",
     "mkdir-recursive": "^0.4.0",
     "mustache": "^3.0.0",
+    "oracledb": "^3.0.1",
+    "pg": "^7.7.1",
     "pluralize-ptbr": "^1.0.3",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "prompt-checkbox": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
