--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terunjs",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Automate creation files",
   "main": "src/index.js",
   "preferGlobal": true,
@@ -29,7 +29,8 @@
     "mkdir-recursive": "^0.4.0",
     "mustache": "^3.0.0",
     "pluralize-ptbr": "^1.0.3",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "prompt-checkbox": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
