Entity_generator hasMany, hasOnde e muitos ajustes

--- a/testes/entity/fields/config.json
+++ b/testes/entity/fields/config.json
@@ -1,7 +1,7 @@
 {
     "defaultValues":{
-        "maxlength": 99999,
+        "maxlength": 100,
         "minlength": 2,
-        "required": "que"
+        "required": true
     }
 }
