--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/polyfill": "^7.0.0",
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
+    "handlebars": "^4.0.12",
     "loading-cli": "^1.0.8",
     "mkdir-recursive": "^0.4.0",
     "mustache": "^3.0.0",
