--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "github": "https://github.com/raphaelkieling/terunjs",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "ascii-art": "^1.5.0",
     "chalk": "^2.4.1",
+    "clear": "^0.1.0",
     "commander": "^2.18.0",
     "handlebars": "^4.0.12",
     "loading-cli": "^1.0.8",
