--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib --watch --copy-files",
     "test": "./node_modules/mocha/bin/mocha",
-    "test:coveralls":"cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "test:coveralls":"./node_modules/.bin/coveralls",
     "test:nyc": "nyc mocha",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
