--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terunjs",
-  "version": "1.2.6-2",
+  "version": "1.2.7",
   "description": "Automate creation files",
   "main": "src/index.js",
   "preferGlobal": true,
