--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "terun": "lib/index.js"
   },
   "scripts": {
-    "build": "./node_modules/.bin/babel src --out-dir lib --watch --copy-files",
+    "build:watch": "./node_modules/.bin/babel src --out-dir lib --watch --copy-files",
+    "build": "./node_modules/.bin/babel src --out-dir lib --copy-files",
     "test": "./node_modules/mocha/bin/mocha",
     "test:coveralls": "./node_modules/.bin/coveralls",
     "test:nyc": "nyc mocha",
