--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terunjs",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Automate creation files",
   "main": "src/index.js",
   "preferGlobal": true,
@@ -42,7 +42,9 @@
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.0",
     "@babel/preset-env": "^7.1.0",
+    "babel-plugin-partial-application": "^1.6.2",
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
