--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terunjs",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Automate creation files",
   "main": "src/index.js",
   "preferGlobal": true,
@@ -12,6 +12,7 @@
     "build": "./node_modules/.bin/babel src --out-dir lib --copy-files",
     "test": "./node_modules/mocha/bin/mocha",
     "test:coveralls": "./node_modules/.bin/coveralls",
+    "test:coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "test:nyc": "nyc mocha",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
@@ -34,10 +35,10 @@
     "commander": "^2.18.0",
     "loading-cli": "^1.0.8",
     "mkdir-recursive": "^0.4.0",
-    "mustache": "^3.0.0",
     "pluralize-ptbr": "^1.0.3",
     "prompt": "^1.0.0",
-    "prompt-checkbox": "^2.2.0"
+    "prompt-checkbox": "^2.2.0",
+    "terun-mustache": "^3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -45,6 +46,7 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.3.0",
     "@babel/preset-env": "^7.1.0",
     "babel-plugin-partial-application": "^1.6.2",
+    "chai": "^4.2.0",
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
