--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build:watch": "./node_modules/.bin/babel src --out-dir lib --watch --copy-files",
     "build": "./node_modules/.bin/babel src --out-dir lib --copy-files",
-    "test": "./node_modules/mocha/bin/mocha",
+    "test": "./node_modules/mocha/bin/mocha --recursive --timeout 15000",
     "test:coveralls": "./node_modules/.bin/coveralls",
     "test:coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "test:nyc": "nyc mocha",
@@ -33,8 +33,10 @@
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
     "commander": "^2.18.0",
+    "fs-readdir-recursive": "^1.1.0",
     "loading-cli": "^1.0.8",
     "mkdir-recursive": "^0.4.0",
+    "nixt": "^0.5.1",
     "pluralize-ptbr": "^1.0.3",
     "prompt": "^1.0.0",
     "prompt-checkbox": "^2.2.0",
