--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terunjs",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "Automate creation files",
   "main": "src/index.js",
   "preferGlobal": true,
@@ -45,6 +45,7 @@
     "pluralize-ptbr": "^1.0.3",
     "prompt": "^1.0.0",
     "prompt-checkbox": "^2.2.0",
+    "prompts": "^2.0.3",
     "terun-mustache": "^3.0.2"
   },
   "devDependencies": {
